Tue Mar  1 14:04:08 2005  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkproperty-x11.c (virtual_atom_check_init): Cast to avoid
	const warnings on data structure seeding.

Tue Mar  1 13:53:56 2005  Manish Singh  <yosh@gimp.org>

	* gtk/xdgmime/xdgmime.[ch]: revert previous change, maintain ABI.

2005-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenutoolbutton.c (button_state_changed_cb): 
	Fix prelighting.  (#157392, Vincent Noel, patch by
	Christian Persch)

	* gtk/gtkicontheme.c (theme_lookup_icon): Make 
	icon data caching work again.  (#168851, Alexander Larsson)

	* gdk-pixbuf/gdk-pixbuf.c:
	* gdk-pixbuf/gdk-pixbuf-features.h.in:
	Revert the previous change, since it breaks
	bin compat.

2005-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkkeyuni.c
	* gdk/gdkpixbuf-drawable.c
	* gdk/gdkrgb.c
	* gdk/x11/gdkdnd-x11.c
	* gdk/x11/gdkevents-x11.c
	* gdk/x11/gdkproperty-x11.c
	* gdk/x11/gdkvisual-x11.c
	* gdk-pixbuf/gdk-pixbuf.c
	* gdk-pixbuf/gdk-pixbuf-features.h.in
	* gtk/gtkaction.c
	* gtk/gtkbindings.c
	* gtk/gtkcolorbutton.c
	* gtk/gtkcombo.c
	* gtk/gtkcontainer.c
	* gtk/gtkfilechooserdefault.c
	* gtk/gtkfilesel.c
	* gtk/gtkgamma.c
	* gtk/gtkiconview.c
	* gtk/gtkinputdialog.c
	* gtk/gtkitemfactory.c
	* gtk/gtkmenu.c
	* gtk/gtktextview.c
	* gtk/gtktooltips.c
	* gtk/gtktreedatalist.c
	* gtk/gtkuimanager.c
	* gtk/tree_minus.xpm
	* gtk/tree_plus.xpm
	* gtk/xdgmime/xdgmime.c
	* gtk/xdgmime/xdgmime.h: 
	Move constant data to .rodata.

2005-02-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaction.c (connect_proxy): Improve the handling
	of buttons as action proxys.  (#165534, Milosz Derezynski)

	* gtk/gtklabel.c (gtk_label_size_request): Fix a typo.
	(#168646, Vincent Untz)

	* gtk/gtkfilechooserdefault.c (save_folder_combo_create): 
	Unset "focus-on-click" for the save folder combo.  (#168688,
	Sven Neumann)

2005-02-25  Matthias Clasen  <mclasen@redhat.com>

	* demos/testpixbuf.c (main): Remove a C++ comment.  (#168531, 
	Paul Cornett)
