@@ -1,3 +1,9 @@
+2005-03-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkwidget.c (gtk_widget_reparent_subwindows): 
+	Avoid warnings if gtk_widget_reparent() is called at
+	unusual times.  (#168966, Christian Persch)
+
 Tue Mar  1 14:04:08 2005  Manish Singh  <yosh@gimp.org>
 
 	* gdk/x11/gdkproperty-x11.c (virtual_atom_check_init): Cast to avoid
